fix for homepage image grid aspect ratio on small screens

--- a/src/assets/_scss/components/_project_grid.scss
+++ b/src/assets/_scss/components/_project_grid.scss
@@ -17,8 +17,7 @@
   }
   @include media-breakpoint-down(md) {
     .bg-image {
-      &.aspect-2x1,
-      &.aspect-1x1 {
+      &.aspect-2x1 {
         padding-top: 55%;
       }
     }
